--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project-A",
+  "name": "project-a",
   "version": "1.0.0",
   "description": "I have created this repo to track my progress learning React via Brian Holts' React-V8 course",
   "main": "index.js",
